--- a/Russian/main/lewa-res.apk/res/values-ru/strings.xml
+++ b/Russian/main/lewa-res.apk/res/values-ru/strings.xml
@@ -42,6 +42,10 @@
     <string name="config_initial_charge_times_ac">10,20,16,8,6,7,10,19,15,26,30,25,25,19,29,30,18,15, 30,40,15,20,25,30,19,15,25,25,45,40,10,45,35,40,45, 45,45,45,45,45,45,45,60,90,60,90,14,29,16,14,16,14, 60,15,43,60,46,59,74,76,163,106,104,89,105,60,193, 16,60,103,106,104,119,76,119,134,136,59,105,74,59, 75,90,29,30,43,15,44,29,30,29,30,29,46,29,44,15, 30,30,180,2429</string>
     <string name="config_initial_charge_times_usb">74, 74, 74, 74, 74, 74, 74, 74, 74, 64, 169, 169, 129, 190, 230, 150, 180, 190, 150, 170, 210, 138, 89, 89, 150, 169, 150, 140, 150, 150, 160, 160, 160, 170, 130, 100, 259, 100, 149, 200, 199, 140, 180, 170, 100, 200, 70, 140, 99, 100, 79, 170, 160, 150, 140, 200, 160, 150, 179, 180, 88, 210, 179, 150, 179, 110, 200, 169, 160, 130, 190, 179, 70, 150, 60, 60, 210, 170, 150, 160, 160, 169, 150, 169, 159, 170, 150, 160, 149, 179, 169, 149, 138, 140, 70, 130, 110, 80, 330, 200, 3446</string>
     <string name="data_usage_warning_title">Трафик не имеет достаточных уведомлений</string>
+    <string name="fixed_line">Фикс. линия</string>
+    <string name="hour">час.</string>
+    <string name="minute">мин.</string>
+    <string name="global_action_screenshot_status">Нажмите одновременно Питание + Громкость вниз для снятия скриншота</string>
     <string name="thumb_search_tip">Вы используете поиск с помощью жестов. n Для отключения  перейдите в Настройки - Сппециальные возможности и отключите поиск с помощью жестов</string>
     <string name="go_to_setting">Задать</string>
     <string name="go_on_read">Назад  к чтению</string>
@@ -51,6 +55,14 @@
     <string name="no_network">Нет подключения к сети</string>
     <string name="suggest_to">Рекомендуется перейти в:</string>
     <string name="check_network">Проверьте сеть</string>
+
+
+
+
+
+
+    <string name="safe_media_volume_warning">"Поднять громкость выше безопасного уровня?
+Прослушивание музыки на максимальном уровне может нанести вред слуху"</string>
     <string name="the_spring_festival">Китайский Новый год</string>
     <string name="lantern_festival">Фестиваль фонарей</string>
     <string name="the_dragon_boat_festival">Праздник лодок-драконов</string>
@@ -119,7 +131,6 @@
     <string name="lunar_nian">двадцать</string>
     <string name="lunar_year">годы</string>
     <string name="lunar_yue">месяц</string>
-    <string name="global_action_screenshot_status">Нажмите одновременно Питание + Громкость вниз для снятия скриншота</string>
     <string name="reboot_recovery">Рекавери</string>
     <string name="reboot_bootloader">Загрузчик</string>
     <string name="reboot_bootmenu">Загрузчик</string>
@@ -143,11 +154,8 @@
     <string name="lock_screen_snooze">Сон</string>
     <string name="lock_screen_pm">PM</string>
     <string name="lock_screen_am">AM</string>
-    <string name="fixed_line">Фиксированная</string>
     <string name="ringtone_custom">Польз.</string>
     <string name="ringtone_silent_summary">Тихий</string>
-    <string name="hour">час.</string>
-    <string name="minute">мин.</string>
     <string name="capital_on">ВКЛ.</string>
     <string name="capital_off">ВЫКЛ.</string>
     <string name="storage_phone">Внутреннее хранилище</string>
