--- a/Russian/main/LewaThemeChooser.apk/res/values-ru/strings.xml
+++ b/Russian/main/LewaThemeChooser.apk/res/values-ru/strings.xml
@@ -108,18 +108,37 @@
     <string name="wallpaper_selector">Центр обоев</string>
     <string name="wifi_off_no_wallpaper">Нет загруженных обоев, пожалуйста, скачайте новые обои через приложение Темы</string>
     <string name="sdcard_unmounted_no_wallpaper">Не получается переключить обои, SD-карта удалена или идет передача данных</string>
-    <string name="deskwallpaper_delete">Вы хотите удалить обои рабочего стола?</string>
-    <string name="deskwallpaper_delete_title">Удаление обоев рабочего стола</string>
-    <string name="lockwallpaper_delete">Вы хотите удалить обои локскрина?</string>
-    <string name="lockwallpaper_delete_title">Удаление обоев локскрина</string>
     <string name="theme_not_fit_phone">Эта тема не подходит к Вашему устройству, пожалуйста, выберите другую</string>
-    <string name="deskwallpaper_delete_success">Обои рабочего стола удалены</string>
-    <string name="lockwallpaper_delete_success">Обои локскрина удалены</string>
     <string name="theme_loading_more">Загрузить еще...</string>
     <string name="theme_loading_more_fail">Загрузка не удалась</string>
     <string name="theme_loading_more_end">Завершено！</string>
     <string name="modify_wallpaper">Обои</string>
-    <string name="theme_name_default">По умолчанию</string>
+    <string name="deskwallpaper_delete">Вы хотите удалить обои рабочего стола?</string>
+    <string name="deskwallpaper_delete_title">Удаление обоев рабочего стола</string>
+    <string name="lockwallpaper_delete">Вы хотите удалить обои локскрина?</string>
+    <string name="lockwallpaper_delete_title">Удаление обоев локскрина</string>
+    <string name="icon_delete_message">Вы уверены, что хотите удалить иконки?</string>
+    <string name="icon_delete_title">Удаление иконок</string>
+    <string name="systemapp_delete_message">Вы уверены, что хотите удалить system style?</string>
+    <string name="systemapp_delete_title">Удаление системного стиля</string>
+    <string name="fonts_delete_message">Вы уверены, что хотите удалить шрифты?</string>
+    <string name="fonts_delete_title">Удаление шрифтов</string>
+    <string name="lockscreen_style_delete_message">Вы уверены, что хотите удалить стиль локскрина?</string>
+    <string name="lockscreen_style_delete_title">Удаление стиля локскрина</string>
+    <string name="deskwallpaper_delete_success">Обои рабочего стола удалены</string>
+    <string name="lockwallpaper_delete_success">Обои локскрина удалены</string>
+    <string name="icons_delete_success">Удаление успешно завершено</string>
+    <string name="system_style_delete_success">Удаление успешно завершено</string>
+    <string name="fonts_delete_success">Удаление успешно завершено</string>
+    <string name="lockscreen_style_delete_success">Удаление успешно завершено</string>
+    <string name="delete_using_theme_wallpaper">"Используемые обои не могут быть удалены"</string>
+    <string name="delete_using_theme_live_wallpaper">"Используемые живые обои не могут быть удалены"</string>
+    <string name="delete_using_theme_font">"Используемый шрифт не может быть удален"</string>
+    <string name="delete_using_theme_lock_screen_wallpaper">"Используемые  обои локскрина не могут быть удалены"</string>
+    <string name="delete_using_theme_icon">"Используемые иконки не могут быть удалены"</string>
+    <string name="delete_using_theme_lock_screen_style">"Используемый локскрин не может быть удален"</string>
+    <string name="delete_using_theme_system_app">"Используемое системное приложение не может быть удалено"</string>
+   <string name="theme_name_default">По умолчанию</string>
     <string name="style_appearance_name">lewadefault</string>
     <string name="author">Lewa OS</string>
 </resources>
