--- a/Russian/main/LewaGameCenter.apk/res/values-ru/strings.xml
+++ b/Russian/main/LewaGameCenter.apk/res/values-ru/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="game_center">Игровой центр</string>
     <string name="game_update">Обновление игр</string>
     <string name="app_download">раз</string>
@@ -86,6 +87,9 @@
     <string name="setting_update_notification">Уведомление об обновлении</string>
     <string name="setting_auto_update">Автообновление</string>
     <string name="setting_auto_update_summary">Автообновление по Wi-Fi</string>
+    <string name="setting_check_update">Проверить обновление</string>
+    <string name="setting_check_update_summary">Текущая версия</string>
+
     <string name="recommend_app_title">Рекомендуемые игры</string>
     <string name="drop_down_list_header_default_text">Нажмите для обновления…</string>
     <string name="drop_down_list_header_pull_text">Протяните для обновления…</string>
@@ -96,5 +100,5 @@
     <string name="drop_down_list_footer_no_more_text">Больше нет</string>
     <string name="app_manage">Игровой менеджер</string>
     <string name="search_tip">Нажмите для поиска</string>
-    <string name="image_mask_path">M32,0c16.471,0,23.101,0,27.551,4.45C64,8.899,64,15.353,64,32c0,16.812,0,23.102-4.464,27.565C55.102,64,48.312,64,32,64 C15.736,64,8.9,64,4.396,59.497C-0.206,54.895,0.001,48.308,0.001,32c0-16.751,0-23.101,4.413-27.515C8.9,0,15.292,0,32,0z</string>
+
 </resources>
