--- a/Russian/main/LewaGallery2.apk/res/values-ru/strings.xml
+++ b/Russian/main/LewaGallery2.apk/res/values-ru/strings.xml
@@ -248,7 +248,7 @@
     <string name="pref_camera_recordlocation_default">on</string>
     <string name="pref_camera_mute_shutter_title">Выкл.звук затвора</string>
     <string name="pref_camera_mute_shutter_default">off</string>
-    <string name="pref_camera_power_shutter_title">Длинное нажатие затвора</string>
+    <string name="pref_camera_power_shutter_title">Долгое нажатие затвора</string>
     <string name="pref_camera_power_shutter_default">off</string>
     <string name="pref_camera_volume_zoom_title">Зум громкостью</string>
     <string name="pref_camera_volume_zoom_default">off</string>
