--- a/Russian/main/Settings.apk/res/values-ru/strings.xml
+++ b/Russian/main/Settings.apk/res/values-ru/strings.xml
@@ -2952,7 +2952,7 @@
     <string name="float_ball_summary">Использовать сенсорные клавиши</string>
     <string name="advanced_settings_title">Расширенные</string>
     <string name="input _settings">Входящие настройки</string>
-    <string name="boot_music_control">Мелодия анимации при загрузке<</string>
+    <string name="boot_music_control">Мелодия анимации при загрузке</string>
     <string name="boot_music_control_summary">Включает или отключает мелодию анимации в момент загрузки</string>
     <string name="eng_mode">Инженерное меню</string>
     <string name="eng_mode_summary">Сбор информации, статистика, тонкие настройки всевозможных параметров устройства</string>
